--- a/doc/复制仓库.md
+++ b/doc/复制仓库.md
@@ -1,4 +1,4 @@
-# 复制仓库
+## 复制仓库
 要复制存储库而不对其进行复制，可以运行特殊克隆命令，然后镜像推送到新仓库。
 
 在复制仓库和和推送到仓库的新副本或镜像之前，必须在 Github 上[创建新仓库](https://docs.github.com/cn/free-pro-team@latest/articles/creating-a-new-repository)。 在以下示例中，`exampleuser/new-repository` 或 `exampleuser/mirrored` 是镜像。
